--- a/Novi.Art/Views/Login/Index.cshtml
+++ b/Novi.Art/Views/Login/Index.cshtml
@@ -6,6 +6,12 @@
 
 <div class="container">
     <form action="@Request.Url.PathAndQuery" method="post" class="form-signin">
+
+        @if (IsPost) // check whether IsPost is true. IsPost returns true only if the view is being loaded during a form post request, and false if it's not.
+        {
+            <div class="alert alert-danger">Invalid login attempt</div>
+        }
+
         <h2 class="form-signin-heading">Please sign in</h2>
         <label for="username" class="sr-only">Email address</label>
         <input id="username" name="username" class="form-control" placeholder="Email address" autofocus="">
