- Create Class Product - Improve navigation with data from the productcontroller

--- a/Novi.Art/Views/Product/Index.cshtml
+++ b/Novi.Art/Views/Product/Index.cshtml
@@ -27,7 +27,7 @@
                 <li class="fa fa-star disable"></li>
             </ul>
             <div class="product-content">
-                <h3 class="title"><a href="#">Love couple</a></h3>
+                <h3 class="title"><a href="/product/lovecouple">Love couple</a></h3>
                 <div class="price">
                     $16.00
                     <span>$20.00</span>
@@ -58,7 +58,7 @@
                 <li class="fa fa-star"></li>
             </ul>
             <div class="product-content">
-                <h3 class="title"><a href="#">Mountains</a></h3>
+                <h3 class="title"><a href="/product/mountains">Mountains</a></h3>
                 <div class="price">
                     $5.00
                     <span>$10.00</span>
@@ -89,7 +89,7 @@
                 <li class="fa fa-star"></li>
             </ul>
             <div class="product-content">
-                <h3 class="title"><a href="#">Abstract art</a></h3>
+                <h3 class="title"><a href="/product/abstract">Abstract art</a></h3>
                 <div class="price">
                     $5.00
                     <span>$10.00</span>
@@ -120,7 +120,7 @@
                 <li class="fa fa-star"></li>
             </ul>
             <div class="product-content">
-                <h3 class="title"><a href="#">Art from your screen</a></h3>
+                <h3 class="title"><a href="/product/screen">Art from your screen</a></h3>
                 <div class="price">
                     $5.00
                     <span>$10.00</span>
@@ -153,7 +153,7 @@
                 <li class="fa fa-star disable"></li>
             </ul>
             <div class="product-content">
-                <h3 class="title"><a href="#">Drawing</a></h3>
+                <h3 class="title"><a href="/product/drawing">Drawing</a></h3>
                 <div class="price">
                     $16.00
                     <span>$20.00</span>
@@ -184,7 +184,7 @@
                 <li class="fa fa-star"></li>
             </ul>
             <div class="product-content">
-                <h3 class="title"><a href="#">Ballerina</a></h3>
+                <h3 class="title"><a href="/product/ballerina">Ballerina</a></h3>
                 <div class="price">
                     $5.00
                     <span>$10.00</span>
@@ -215,7 +215,7 @@
                 <li class="fa fa-star"></li>
             </ul>
             <div class="product-content">
-                <h3 class="title"><a href="#">David</a></h3>
+                <h3 class="title"><a href="/product/david">David</a></h3>
                 <div class="price">
                     $5.00
                     <span>$10.00</span>
@@ -246,7 +246,7 @@
                 <li class="fa fa-star"></li>
             </ul>
             <div class="product-content">
-                <h3 class="title"><a href="#">Eifeltower</a></h3>
+                <h3 class="title"><a href="/product/Eifeltoren">Eifeltower</a></h3>
                 <div class="price">
                     $5.00
                     <span>$10.00</span>
