--- a/Novi.Art/Views/Login/Index.cshtml
+++ b/Novi.Art/Views/Login/Index.cshtml
@@ -5,16 +5,18 @@
 }
 
 <div class="container">
-    <form action="@Request.Url.PathAndQuery" method="post" class="form-signin">
-        @if (IsPost)
+    @using (Html.BeginForm("Index", "Login",
+        new { ReturnUrl = Request.QueryString["ReturnUrl"] },
+        FormMethod.Post,
+        new { @class = "form-signin" }))
+    {
+        if (IsPost)
         {
             <div class="alert alert-danger">Invalid login attempt</div>
         }
         <h2 class="form-signin-heading">Please sign in</h2>
         @Html.LabelFor(m => m.Username, "Email address", new { @class = "control-label" })
-        @*<label for="username" class="sr-only">Email address</label>*@
         @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Email address", autofocus = "" })
-        @*<input id="username" name="username" value='@(Model?.Username ?? "")' class="form-control" placeholder="Email address" autofocus="">*@
         <label for="password" class="control-label">Password</label>
         <input type="password" name="password" class="form-control" placeholder="Password">
         <div class="checkbox">
@@ -23,5 +25,5 @@
             </label>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    </form>
-</div>
+    }
+</div>  
