--- a/Novi.Art/Views/Cart/Index.cshtml
+++ b/Novi.Art/Views/Cart/Index.cshtml
@@ -15,7 +15,8 @@
                         <th scope="col"> </th>
                         <th scope="col">Product</th>
                         <th scope="col">Available</th>
-                        <th scope="col" class="text-center">Quantity</th>
+                        <th scope="col" class="text-left">Hire from</th>
+                        <th scope="col" class="text-left">Hire till</th>
                         <th scope="col" class="text-right">Price</th>
                         <th> </th>
                     </tr>
@@ -25,7 +26,8 @@
                         <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
                         <td>Product Name Dada</td>
                         <td>In stock</td>
-                        <td><input class="form-control" type="text" value="1" /></td>
+                        <td><input class="form-control" type="date" value="@DateTime.Now" /></td>
+                        <td><input class="form-control" type="date" value="@DateTime.Now.AddMonths(1)" /></td>
                         <td class="text-right">$124.90</td>
                         <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td>
                     </tr>
@@ -33,7 +35,8 @@
                         <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
                         <td>Product Name Toto</td>
                         <td>In stock</td>
-                        <td><input class="form-control" type="text" value="1" /></td>
+                        <td><input class="form-control" type="date" value="@DateTime.Now" /></td>
+                        <td><input class="form-control" type="date" value="@DateTime.Now.AddMonths(1)" /></td>
                         <td class="text-right">$33.90</td>
                         <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td>
                     </tr>
@@ -41,7 +44,8 @@
                         <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
                         <td>Product Name Titi</td>
                         <td>In stock</td>
-                        <td><input class="form-control" type="text" value="1" /></td>
+                        <td><input class="form-control" type="date" value="@DateTime.Now" /></td>
+                        <td><input class="form-control" type="date" value="@DateTime.Now.AddMonths(1)" /></td>
                         <td class="text-right">$70.00</td>
                         <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td>
                     </tr>
