--- a/Novi.Art/Views/Shared/_LayoutNoFooter.cshtml
+++ b/Novi.Art/Views/Shared/_LayoutNoFooter.cshtml
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/modernizr")  <!--Javascript codebundles-->
 
     <link rel="icon" href="~/Content/images/icons/32x32.png" sizes="32x32">
     <link rel="icon" href="~/Content/images/icons/192x192.png" sizes="192x192">
