--- a/Novi.Art/Views/Shared/_Layout.cshtml
+++ b/Novi.Art/Views/Shared/_Layout.cshtml
@@ -1,10 +1,4 @@
-﻿@helper IconBars(int count) // create a icon menubuttun for mobil versions
-{
-    for (int i = 0; i < count; i++)
-    {
-        <span class="icon-bar"></span>
-    }
-}
+﻿
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,26 +12,7 @@
     <link rel="icon" href="~/Content/images/icons/192x192.png" sizes="192x192">
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    @IconBars(3)
-                </button>
-                <a href='@Url.Action("Index", "Home")' class="navbar-brand">
-                    <div class="Noviart-logo"></div>
-                </a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Gallery", "Index", "Product")</li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href='@Url.Action("Index", "Cart")'><i class="fa fa-shopping-cart"></i> Cart</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
+    @Html.Partial("~/Views/Shared/_NavBar.cshtml")
     <div class="container body-content">
         @RenderBody()
         <hr />
