--- a/Novi.Art/Views/Shared/_LayoutNoFooter.cshtml
+++ b/Novi.Art/Views/Shared/_LayoutNoFooter.cshtml
@@ -18,26 +18,7 @@
     <link rel="icon" href="~/Content/images/icons/192x192.png" sizes="192x192">
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    @IconBars(2)
-                </button>
-                <a href='@Url.Action("Index", "Home")' class="navbar-brand">
-                    <div class="hplus-logo"></div>
-                </a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Our Products", "Index", "Product")</li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href='@Url.Action("Index", "Cart")'><i class="fa fa-shopping-cart"></i> Cart</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
+    @Html.Partial("~/Views/Shared/_NavBar.cshtml")
     <div class="container body-content">
         @RenderBody()
     </div>
